[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-overflow-mcp"
version = "1.0.1"
description = "MCP server for Context Overflow Q&A platform"
authors = [
    {name = "Venkatesh", email = "venkateshtata@example.com"},
    {name = "ZohraB", email = "zohrab@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["answers", "mcp", "programming", "qa", "questions", "stackoverflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://web-production-f19a4.up.railway.app"
Repository = "https://github.com/venkateshtata/context-overflow-mcp"
Documentation = "https://github.com/venkateshtata/context-overflow-mcp"

[project.scripts]
context-overflow-mcp = "context_overflow_mcp.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_overflow_mcp*"]